[MARKENG-2434]fixed second title spacing

--- a/src/components/Microsite/Header/Header.scss
+++ b/src/components/Microsite/Header/Header.scss
@@ -456,11 +456,12 @@
   color: $grey_90 !important;
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", Helvetica, Arial, sans-serif;
   background-color: $grey_00;
+  padding-left: 0px !important;
 }
 
 .navbar,
 .nav-secondary {
-  padding: 5px 16px !important;
+  padding: 6px 16px !important;
 }
 
 .navbar-v6,
@@ -472,3 +473,6 @@
     margin: 0px;
   }
 }
+// .second-title, .nav-brand a {
+  
+// }
